--- a/_config.yml
+++ b/_config.yml
@@ -16,8 +16,8 @@
 title: zweed
 description: >- # this means to ignore newlines until "baseurl:"
   Observations
-baseurl: "/zachweed/" # the subpath of your site, e.g. /blog
-url: "https://www.zachweed.com"
+baseurl: "/zachweed" # the subpath of your site, e.g. /blog
+url: "http://zachweed.github.io"
 github_username:  zachweed
 # Build settings
 markdown: kramdown
