--- a/_config.yml
+++ b/_config.yml
@@ -16,8 +16,8 @@
 title: zweed
 description: >- # this means to ignore newlines until "baseurl:"
   Observations
-baseurl: "/" # the subpath of your site, e.g. /blog
-url: "http://zachweed.github.io"
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "https://zachweed.com"
 github_username:  zachweed
 # Build settings
 markdown: kramdown
